--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <div class="card">
     <h1>Happy Anniversary ❤️</h1>
-    <div class="date">together for 1 year, 9 month,5 days  , forever to go ✨</div>
+    <div class="date">together since 1 year, 9 month,5 days  , forever to go ✨</div>
 
     <button onclick="revealSecret()">Open My Secret 💌</button>
 
