--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
 
   <div class="card">
     <h1>Happy Anniversary ❤️</h1>
-    <div class="date">together since 1 year, 9 month,5 days  , forever to go ✨</div>
+    <div class="date">together since 1 year, 10 Months and  , forever to go ✨</div>
 
     <button onclick="revealSecret()">Open My Secret 💌</button>
 
     <div id="secretMessage" class="secret">
-      I don’t how much enough i am for you , but you mean everything to me.  
+      you don't know how much you mean to me , how much i love you, how much i care about you  .  
       <br><br>
-      You are my calmness in my chaotic days , you are my smile on bad days,  
-      and the reason I believe in forever.
+      My calmness comes from you, my hope to work to live comes from the only person you ,  who am i 
+      to be the the one to live when you are the one i live for , every day and forever.
         
       <br><br>
-      I do choose you. Always. ❤️
+      I do choose you. Always, but will you choose me?always. ❤️
     </div>
   </div>
 
